issue 57 | improved zoom, removed bug showing graph when collapsed, put min and max values dynamically using states and props

--- a/frontend/src/css/road_details.css
+++ b/frontend/src/css/road_details.css
@@ -85,8 +85,10 @@
 
 .road-conditions-graph {
   position: relative;
-  width: 100vw;
-  display: flex;
+  left: 2vw;
+  right: 2vw;
+  width: 96vw;
+  /*display: flex;*/
   justify-content: center;
   align-items: center;
 }
